# cdb-fgc

./: README.md  RF_mab.csv  app.py  pyproject.toml  requirements.txt  verif_nome_col.py
pages/: marcelo.py  paula.py
