[project]
name = "renda-fixa"
version = "0.1.0"
description = ""
authors = [
    {name = "MAB"}
]
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (==2.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
